--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </li>
                 <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/templateflip" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="https://github.com/templateflip" title="Github"><i class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a>
+                <li class="nav-item"><a class="nav-link" href="https://github.com/lostintheflood" title="Github"><i class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a>
                 </li>
               </ul>
             </nav>
@@ -48,11 +48,11 @@
     </header>
     <div class="page-content">
       <div class="container">
-<div class="cover shadow-lg bg-white">
+<div class="cover shadow-lg bg-black">
   <div class="cover-bg p-3 p-lg-4 text-white">
     <div class="row">
       <div class="col-lg-4 col-md-5">
-        <div class="avatar hover-effect bg-white shadow-sm p-1"><img src="images/avatar.jpg" width="200" height="200"/></div>
+        <div class="avatar hover-effect bg-white shadow-sm p-1"><img src="images/picture1.jpg" width="200" height="200"/></div>
       </div>
       <div class="col-lg-8 col-md-7 text-center text-md-start">
         <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Thomas Jansson</h2>
