--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <!-- *** Home Section starts ***-->
         <section class="home" id="home">
-            <div class="home-overlay">
+            <div class="home-overlay"></div>
                 <nav class="navbar">
                     <div class="logo">
                         <h1> TJ</h1>
@@ -45,7 +45,7 @@
                         <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                     </div>
                 </div>
-            </div>
+            
 
         </section>
         <!-- *** Home Section ends ***-->
